# Typewriter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kobo.cmake  Makefile  Makefile.vterm  Meson.libevdev
scripts/: chroot_img.sh  disable-wifi.sh  enable-wifi.sh  mkimg.sh  mkshrmount.sh  nickel.sh  typewriter.sh
src/: einktest.cpp  main.cpp
src/typewriter/: eink.cpp  eink.hpp  events.cpp  events.hpp  input.cpp  input.hpp  keymap.hpp  main.cpp  pty.cpp  pty.hpp  shared.hpp  term.cpp  term.hpp
